# Northwind.Web/ClientApp/src/app/clients.ts
@@ -355,6 +355,57 @@ export class OrdersClient {
     }
 
     /**
+     * Returns All Orders
+     * @return an order
+     */
+    getAllOrders(): Observable<Order[]> {
+        let url_ = this.baseUrl + "/orders/getallorders";
+        url_ = url_.replace(/[?&]$/, "");
+
+        let options_ : any = {
+            observe: "response",
+            responseType: "blob",			
+            headers: new HttpHeaders({
+                "Accept": "application/json"
+            })
+        };
+
+        return this.http.request("get", url_, options_).pipe(_observableMergeMap((response_ : any) => {
+            return this.processGetAllOrders(response_);
+        })).pipe(_observableCatch((response_: any) => {
+            if (response_ instanceof HttpResponseBase) {
+                try {
+                    return this.processGetAllOrders(<any>response_);
+                } catch (e) {
+                    return <Observable<Order[]>><any>_observableThrow(e);
+                }
+            } else
+                return <Observable<Order[]>><any>_observableThrow(response_);
+        }));
+    }
+
+    protected processGetAllOrders(response: HttpResponseBase): Observable<Order[]> {
+        const status = response.status;
+        const responseBlob = 
+            response instanceof HttpResponse ? response.body : 
+            (<any>response).error instanceof Blob ? (<any>response).error : undefined;
+
+        let _headers: any = {}; if (response.headers) { for (let key of response.headers.keys()) { _headers[key] = response.headers.get(key); }};
+        if (status === 200) {
+            return blobToText(responseBlob).pipe(_observableMergeMap(_responseText => {
+            let result200: any = null;
+            result200 = _responseText === "" ? null : <Order[]>JSON.parse(_responseText, this.jsonParseReviver);
+            return _observableOf(result200);
+            }));
+        } else if (status !== 200 && status !== 204) {
+            return blobToText(responseBlob).pipe(_observableMergeMap(_responseText => {
+            return throwException("An unexpected server error occurred.", status, _responseText, _headers);
+            }));
+        }
+        return _observableOf<Order[]>(<any>null);
+    }
+
+    /**
      * Gets the order headers that meet the search criteria
      * @return The order
      */
@@ -528,7 +579,13 @@ export interface Order {
     employeeFirstName?: string | undefined;
     employeeLastName?: string | undefined;
     shipperCompanyName?: string | undefined;
+    orderTotal?: number | undefined;
+    shipTitle?: string | undefined;
+    shipPhone?: string | undefined;
+    shipFax?: string | undefined;
+    customerName?: string | undefined;
     details?: OrderDetail[] | undefined;
+    employeeFullName?: string | undefined;
 }
 
 export interface OrderDetail {
